# NetworkApp

./: .gitignore  CMakeLists.txt  appscreen.cpp  appscreen.h  appscreen.ui  clientuser.cpp  clientuser.h  connectjoinpopup.cpp  connectjoinpopup.h  connectjoinpopup.ui  connectsettingpopup.cpp  connectsettingpopup.h  connectsettingpopup.ui  hostsettingpopup.cpp  hostsettingpopup.h  hostsettingpopup.ui  hostuser.cpp  hostuser.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reglog.cpp  reglog.h  reglog.ui  resources.qrc  socketmanager.cpp  socketmanager.h
styles/: darkmode.qss  lightmode.qss
